

==============================
Release 5.*
==============================
2014-06-08    If the details are open use another property if resizing the WPFMessageBox is possible or not
2014-06-08    Add possibility to set the details content in the WPFMessageBox
2014-06-08    Add properties to define different sizes with the details open in the WPFMessageBox
2014-06-08    Remove Height and Width option properties out of the WPFMessageBox; since it does SizeToContent is has no effect anyway
2014-06-08    Add possibility to show and hide a details button (there is no details section so far)
2014-06-08    Organize options for the WPFMessageBox window to a separate object in the WPFMessageBoxOptions
2014-06-08    Since not everything can be changed by assigning the WPFWindow style, the whole functionality has to be removed
2014-06-08    The WPFMessageBox shows the minimize and maximize buttons if it can be resized
2014-06-07    Add ScrollViewer control to WPFMessageBox to show a vertical scrollbar if the text became to long
2014-06-07    The continue button was not able to get the default focus
2014-06-07    Setting the default button on the WPFMessageBox was not working
2014-06-07    Add "_Don't show this message again" checkbox possibility to the WPFMessageBox
2014-06-04    Adjust ButtonsPanel in WPFMessageBox to have dynamic longer buttons if the text is adjusted
2014-06-04    If there are many buttons in the WPFMessageBoxOptions which became cut, the MaxWidth will be adjusted
2014-06-04    Add some window options to the WPFMessageBoxOptions
2014-06-04    Change horizontal title alignments default in the TitledItemsControl to left (like written in the documentation)
2014-06-04    Add EnumerationComboBox
2014-06-03    Add YesToAll and NoToAll button possibilities to the WPFMessageBox
2014-06-02    Add KeyboardWatcher to observe keyboard events (keyboard hooks) even the app has not the focus
2014-05-25    Add CancelTryAgainContinue to WPFMessageBox