@@ -20,6 +20,7 @@
                                                 ShowDoNotShowAgainCheckBox="{Binding Options.ShowDoNotShowAgainCheckBox}"
                                                 IsDoNotShowAgainChecked="{Binding Options.IsDoNotShowAgainChecked, Mode=TwoWay}"
                                                 ShowDetails="{Binding Options.ShowDetails}"
+                                                CustomItem="{Binding Options.CustomItem}"
                                                 DockPanel.Dock="Bottom"
                                                 x:Name="PART_ButtonPanel" />
         
